grammar.js
    template: ($) => repeat($._declaration),

    // Each individual "thing" in the file
    _declaration: ($) =>
      choice(
        alias($.comment, $.comment_statement),
        $.doctype,
        $._hbs_statement,
        prec(2, $.style_element),
        prec(2, $.script_element),
        $.element_node,
        prec(-1, $.text_node),
        prec(-2, alias($._loose_brace, $.text_node)),
      ),

    // Any `{{ ... }}` Handlebars statement that renders output: plain/triple
    // mustaches, partials, and the block forms. Membership is defined once
    // here so every context that renders output (declarations, attribute
    // values) allows the same family and cannot drift apart.
    doctype: () => token(/<!doctype[^>]*>/i),

    //
    // Text
    //

    // Match anything that doesn't start with
    // - An open/close HTML delimiter (<, >)
    // - An open/close Mustache delimiter ({, })
    text_node: () => token(/[^<>{}]+/),

    // A lone `{` or `}` that isn't part of a `{{ ... }}` delimiter is rendered
    // by Glimmer as literal text (e.g. the trailing `}}` left over when a
    // single-line comment like `{{! ... {{#if}} ... }}` terminates early at the
    // inner `}}`). The low precedence ensures real `{{`/`}}` delimiters, which
    // are longer matches, always win.
    string_literal: ($) =>
      choice($._single_quote_string_literal, $._double_quote_string_literal),
    // https://github.com/tree-sitter/tree-sitter-javascript/blob/37af80d372ae9e2f5adc2c6321d5a34294dc348b/grammar.js#L826
    _single_quote_string_literal: () => seq("'", /[^'\\]*/, "'"),
    // https://github.com/tree-sitter/tree-sitter-javascript/blob/37af80d372ae9e2f5adc2c6321d5a34294dc348b/grammar.js#L818
    _double_quote_string_literal: () => seq('"', /[^"\\]*/, '"'),

    // Matches the Handlebars NUMBER token: an integer with an optional
    // decimal part (e.g. `12`, `1.5`)
    number_literal: () => /[0-9]+(\.[0-9]+)?/,

    tag_name: () => /(@?[a-zA-Z0-9]|-|:|\.)+/,

    // "Normal" elements with separate opening and closing tags
    element_node_start: ($) =>
      seq("<", $.tag_name, tagBody($), optional($.block_params), ">"),
    element_node_end: ($) => seq("</", $.tag_name, ">"),

    // "Void" elements are self-closing. HTML void elements (`<meta>`,
    // `<link>`, `<br>`, `<img>`, ...) additionally have no closing tag and are
    // frequently written with a plain `>` rather than `/>`. Glimmer templates
    // never contain these bare `>` void tags, so upstream treats them as
    // "normal" elements and errors waiting for a close tag that never comes.
    // The void name is aliased to `tag_name` so consumers see one node type.
    element_node_void: ($) =>
      choice(
        seq("<", $.tag_name, tagBody($), "/>"),
        seq(
          "<",
          alias($.void_tag_name, $.tag_name),
          tagBody($),
          choice(">", "/>"),
        ),
      ),

    // An "Element" is either a "normal" or "void" element
    element_node: ($) =>
      choice(
        seq($.element_node_start, repeat($._declaration), $.element_node_end),
        $.element_node_void,
      ),

    // Mirror tree-sitter-html's special handling of <style> elements:
    // treat the contents as a single RAW_TEXT token up to the closing tag.
    //
    // NOTE: We only special-case <style> here (not <script>) because that is
    // what the new corpus test asserts.
    attribute_name: () => /[^<>"'/={}()\s\.,!?|]+/,

    _splattributes: () => "...attributes",

    attribute_node: ($) =>
      choice(
        seq($.attribute_name, optional(seq("=", attributeValue($)))),
        // A mustache can also *be* the attribute's name, e.g.
        // `<div {{attrName}}="x">`. The `=` is required on this branch: without
        // it the mustache is a plain tag-body statement (a Glimmer modifier),
        // which `tagBody` already handles, so the two never overlap.
        seq(field("name", $.mustache_statement), "=", attributeValue($)),
        alias($._splattributes, $.attribute_name),
      ),

    // An unquoted attribute value, e.g. `<a href=foo.html>`. Plain HTML that
    // Glimmer templates never use, so upstream omits it. `{`/`}` are excluded so
    // a following `{{ ... }}` is never swallowed, and the negative token
    // precedence lets `number_literal` win the tie on `attr=12`.
    //
    // The shape `(\/*[^...\/]+)+` allows leading and interior slashes
    // (`href=/a/b`, `src=//host/x`) but never a trailing one, so the `/` in
    // `<Foo bar=baz/>` stays available to close the tag. HTML would read that
    // slash as part of the value; self-closing tags are far more common than
    // trailing-slash unquoted values in these templates.
    attribute_value: () => token(prec(-1, /(\/*[^<>"'=\s{}/]+)+/)),

    // Special attribute-value strings that can embed a mustache statement
    concat_statement: ($) =>
      choice(
        $._single_quote_concat_statement,
        $._double_quote_concat_statement,
      ),

    // Attribute values commonly embed not just `{{ ... }}` but whole
    // `{{#if}}...{{/if}}` / `{{#each}}...{{/each}}` blocks (e.g.
    // `class="a {{#if x}}b{{/if}}"`) and partials, so the full statement
    // family is allowed here.
    _single_quote_concat_statement: ($) =>
      seq(
        "'",
        repeat(
          choice(
            $._mustache_safe_single_quote_string_literal_content,
            $._hbs_statement,
          ),
        ),
        "'",
      ),
    _double_quote_concat_statement: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $._mustache_safe_double_quote_string_literal_content,
            $._hbs_statement,
          ),
        ),
        '"',
      ),

    block_params: ($) => seq("as", "|", repeat($.identifier), "|"),

    identifier: () => IDENTIFIER_PATTERN,
    path_expression: ($) => seq($.identifier, repeat1(seq(".", $.identifier))),

    // Handlebars parent-context references: `..` (the parent scope itself),
    // `../foo`, `../../foo.bar`. These use `/` as a segment separator, which
    // the plain `identifier` regex forbids, so upstream (which never needs
    // them) parses them into an ERROR. Kept a single token to avoid clashing
    // with the `/` in `</` and `/>` tag delimiters.
    parent_path: () =>
      token(
        seq(
          "..",
          repeat(seq("/", "..")),
          optional(
            seq("/", IDENTIFIER_PATTERN, repeat(seq(".", IDENTIFIER_PATTERN))),
          ),
        ),
      ),

    // Represents anything that can be a "value"; things like
    // - Strings
    // - Numbers
    // - Variables
    // - Handlebars sub-expressions
    _expression: ($) =>
      choice(
        prec(1, $.number_literal),
        $.string_literal,
        $.boolean_literal,
        $.sub_expression,
        $.parent_path,
        $.path_expression,
        $.identifier,
      ),

    hash_pair: ($) =>
      seq(field("key", $.identifier), "=", field("value", $._expression)),

    // `{{{ ... }}}` is Handlebars' unescaped (raw HTML) output; `{{ ... }}` is
    // the escaped form. Both share this node so every existing highlight query
    // applies to the triple form too.
    mustache_statement: ($) =>
      choice(
        seq(mustacheOpen(), mustacheContent($), mustacheClose()),
        seq("{{{", mustacheContent($), "}}}"),
      ),

    // Handlebars partial invocation, e.g. `{{> nav}}`, `{{> nav foo}}`,
    // `{{> nav key=value}}` or `{{> partials/header}}`. This is standard
    // Handlebars syntax that plain Glimmer/Ember templates omit; supporting it
    // keeps `.hbs` files that use partials from parsing into an ERROR node.
    partial_statement: ($) =>
      seq(mustacheOpen(">"), partialHead($), mustacheClose()),

    // A partial name is broader than an `identifier`: Handlebars allows dotted
    // and slash-separated names (`foo.bar`, `partials/header`) as well as the
    // `@partial-block` reference.
    partial_name: () => token(/[A-Za-z0-9_@][A-Za-z0-9_@:./-]*/),

    // Handlebars partial block, e.g. `{{#> layout key=value}} ... {{/layout}}`.
    // The body renders wherever the partial emits `{{> @partial-block}}`. Like
    // `partial_statement`, this is standard Handlebars that Glimmer omits.
    // The end rule mirrors `block_statement_end` but takes a `partial_name`,
    // since the closer must repeat the (possibly dotted/slashed) partial name.
    partial_block_statement_start: ($) =>
      seq(mustacheOpen("#>"), partialHead($), mustacheClose()),

    partial_block_statement_end: ($) =>
      seq(mustacheOpen("/"), field("name", $.partial_name), mustacheClose()),

    partial_block_statement: ($) =>
      seq(
        $.partial_block_statement_start,
        field("program", repeat($._declaration)),
        $.partial_block_statement_end,
      ),

    // The tag-body counterpart of `partial_block_statement`: same delimiters,
    // but the body holds attributes rather than declarations. Aliased to
    // `partial_block_statement` by `tagBody`.
    raw_block_statement: ($) =>
      seq(
        $.raw_block_statement_start,
        optional($.raw_block_text),
        $.raw_block_statement_end,
      ),

    raw_block_statement_start: ($) =>
      seq("{{{{", field("path", $.identifier), optional($._arguments), "}}}}"),

    raw_block_statement_end: ($) =>
      seq("{{{{/", field("path", $.identifier), "}}}}"),

    sub_expression: ($) => seq("(", mustacheContent($), ")"),

    // There *must* be either:
    // - 1 or more positional argument and 0 or more hash pairs
    // - 0 or more positional arguments and 1 or more hash pairs
    _arguments: ($) =>
      choice(
        seq(repeat1(field("argument", $._expression)), repeat($.hash_pair)),
        seq(repeat(field("argument", $._expression)), repeat1($.hash_pair)),
      ),

    helper_invocation: ($) =>
      seq(
        field("helper", choice($.identifier, $.path_expression)),
        $._arguments,
      ),

    //
    // Block Expression
    //

    block_statement_start: ($) =>
      seq(
        mustacheOpen("#"),
        field("path", $.identifier),
        optional($._arguments),
        optional($.block_params),
        mustacheClose(),
      ),

    block_statement_end: ($) =>
      seq(mustacheOpen("/"), field("path", $.identifier), mustacheClose()),

    else_statement: ($) =>
      seq(
        mustacheOpen(),
        "else",
        optional(mustacheContent($)),
        mustacheClose(),
      ),

    block_statement: ($) =>
      seq(
        $.block_statement_start,
        repeat(choice(field("program", $._declaration), $.else_statement)),
        $.block_statement_end,
      ),

    // The tag-body counterpart of `block_statement` (see `tagBody`), e.g.
    // `<div {{#if x}}data-y="1"{{/if}}>`. Aliased to `block_statement`.
